Made a correction on grid-gap

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -625,6 +625,7 @@ main .container .right{
   }
   main .container{
     grid-template-columns: 0 auto 5rem;
+    gap: 0;
   }
   main .container .left{
     grid-column: 3/4;
